--- a/Actividad Practica 2/actividad.html
+++ b/Actividad Practica 2/actividad.html
@@ -6,6 +6,12 @@
 scale=1.0">
 <title>JavaScript Interno</title> 
    <script src="script.js"></script>
+   <script>
+    
+function  messageEER(){
+    alert("ERROR 404");
+}
+   </script>
  </head>
     <body>    
     <h1>JavaScript Externo y interno</h1>
